<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:paddingLeft="10dp"
    android:paddingTop="20dp"
    android:paddingRight="10dp"
    android:paddingBottom="20dp">
    <!--tools:context=".presentation.CreateFlashCardActivity">-->

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="825dp"
        android:background="@color/colorLogInText"
        app:cardBackgroundColor="@color/colorLogInText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="546dp"
        android:layout_height="793dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorLogInText"
        android:contentDescription="@string/deck_name"
        android:fadingEdge="horizontal|vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"
        app:srcCompat="@android:color/white" />

    <TextView
        android:id="@+id/title"
        android:layout_width="530dp"
        android:layout_height="150dp"
        android:layout_marginTop="36dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/deck_name"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:text="@string/deck_name" />

    <EditText
        android:id="@+id/deckTitle"
        android:layout_width="501dp"
        android:layout_height="137dp"
        android:layout_marginTop="36dp"
        android:autofillHints="@string/deck_name"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:hint="@string/enter_deck_name"
        android:inputType=""
        android:textAlignment="center"
        android:textColorLink="@color/colorGO"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/Enter_Button"
        android:layout_width="526dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="140dp"
        android:background="@android:drawable/btn_default_small"
        android:backgroundTint="@color/test"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif"
        android:text="@string/Enter"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deckTitle"
        app:layout_constraintVertical_bias="0.292" />

    <Button
        android:id="@+id/Cancel_Button"
        android:layout_width="526dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="140dp"
        android:background="@android:drawable/btn_default_small"
        android:backgroundTint="@color/test"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif"
        android:text="@string/cancel"
        android:textColor="@android:color/background_light"
        android:textColorLink="@color/colorGO"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deckTitle"
        app:layout_constraintVertical_bias="0.979" />


</android.support.constraint.ConstraintLayout>
